--- a/founder.html
+++ b/founder.html
@@ -1,1 +1,7 @@
-
+<html>
+  <body>
+    <title1>About the founder</title1><hr>
+    <title2>Chronomoly6</title2><hr>
+    <title3>"Chrono</title3><hr>
+  </body>
+</html>
