--- a/team.html
+++ b/team.html
@@ -1,3 +1,5 @@
+<html>
+<div align="center">
 <b>The Team</b>
  <table style="width:100%">
   <tr>
@@ -36,4 +38,6 @@
     <td>SmoreJS, Host</td>
     <td>Assistant JS Dev, Head Host</td>
   </tr>
-</table> 
+</table>
+</div>
+</html>
