center align tables

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <h1>Current Bots/Projects</h1>
 
 <h2>Bots</h2>
-<table style="width:100%">
+<table align = "center" style="width:100%">
     <tr>
         <td><a href="smorebot.html">SmoreBot</a></td>
     </tr>
