--- a/smorebot.html
+++ b/smorebot.html
@@ -9,7 +9,7 @@
 <b>SmoreBot GitHub Repository:</b> <a href="https://github.com/SmoreBot/SmoreBot">Click Here</a><br><br>
 
 <b>Developers</b>
-<table style="width:100%">
+<table align="center" style="width:100%">
     <tr>
         <td>Chrono</td>
         <td>Chronomly6#8108</td>
