--- a/smorebot.js.html
+++ b/smorebot.js.html
@@ -9,7 +9,7 @@
 <b>SmoreBot.js GitHub Repository:</b> <a href="https://github.com/SmoreBot/SmoreJS">Click Here</a><br><br>
 
 <b>Developers</b>
-<table style="width:100%">
+<table align="center" style="width:100%">
     <tr>
         <td>Space</td>
         <td>SpaceX#0276</td>
