--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 <html>
 <div align="center">
 <b>The Team</b>
- <table style="width:100%">
+ <table align="center" style="width:100%">
   <tr>
     <th>Name</th>
     <th>Discord Tag</th>
