--- a/webdev.html
+++ b/webdev.html
@@ -5,7 +5,7 @@
 <h2>The SmoreSoftware official website wouldn't be possible without a web team, now, would it? The SmoreSoftware web team is responsible for the SmoreSoftware website and also make desktop apps in their spare time.</h2><br><br>
 
 <b>Developers</b>
-<table style="width:100%">
+<table align="center" style="width:100%">
 <tr>
 <td>TJ</td>
 <td>TJDoesCode#6088</td>
