--- a/qbot.html
+++ b/qbot.html
@@ -1,28 +1,36 @@
 <html>
-<div align="center">
-<h1>QBot</h1>
 
-<h2>A Bot who's main purpose is quoting user's messages!</h2><br><br>
+<head>
+  <title>QBot</title>
+</head>
 
-<b>Invite QBot:</b> <a href ="https://discordapp.com/oauth2/authorize?client_id=322882931746013185&scope=bot&permissions=2146958463">Click Here</a><br><br>
+<body>
+  <div align="center">
+    <h1>QBot</h1>
 
-<b>QBot GitHub Repository:</b> <a href="https://github.com/SmoreBot/QBot">Click Here</a><br><br>
+    <h2>A Bot who's main purpose is quoting user's messages!</h2><br><br>
 
-<b>Developers</b>
-<table align="center" style="width:100%">
-    <tr>
+    <b>Invite QBot:</b> <a href="https://discordapp.com/oauth2/authorize?client_id=322882931746013185&scope=bot&permissions=2146958463">Click Here</a><br><br>
+
+    <b>QBot GitHub Repository:</b> <a href="https://github.com/SmoreBot/QBot">Click Here</a><br><br>
+
+    <b>Developers</b>
+    <table align="center" style="width:100%">
+      <tr>
         <td>Chrono</td>
         <td>Chronomly6#8108</td>
         <td>Head QBot Developer</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>TJ</td>
         <td>TJDoesCode#6088</td>
         <td>QBot Maintainer/Dev</td>
-    </tr>
-</table><br><br>
+      </tr>
+    </table><br><br>
 
-<b>Host:</b> QBot is hosted by Space.
+    <b>Host:</b> QBot is hosted by Space.
 
-</div>
+  </div>
+</body>
+
 </html>
