--- a/uke-lely.html
+++ b/uke-lely.html
@@ -1,23 +1,31 @@
 <html>
-<div align="center">
-<h1>Uke Lely</h1>
 
-<h2>A ukelele themed discord bot</h2><br><br>
+<head>
+  <title>Uke Lely</title>
+</head>
 
-<b>Invite Uke Lely:</b> At this time, Uke Lely is still at an early stage of development, and is unavailable to the public. Chrono hopes that it will reach a beta release soon.<br><br>
+<body>
+  <div align="center">
+    <h1>Uke Lely</h1>
 
-<b>Uke Lely GitHub Repository:</b> <a href="https://github.com/SmoreBot/Uke-Lely">Click Here</a><br><br>
+    <h2>A ukelele themed discord bot</h2><br><br>
 
-<b>Developers</b>
-<table align="center" style="width:100%">
-    <tr>
+    <b>Invite Uke Lely:</b> At this time, Uke Lely is still at an early stage of development, and is unavailable to the public. Chrono hopes that it will reach a beta release soon.<br><br>
+
+    <b>Uke Lely GitHub Repository:</b> <a href="https://github.com/SmoreBot/Uke-Lely">Click Here</a><br><br>
+
+    <b>Developers</b>
+    <table align="center" style="width:100%">
+      <tr>
         <td>Chrono</td>
         <td>Chronomly6#8108</td>
         <td>Head Uke Lely Developer</td>
-    </tr>
-</table><br><br>
+      </tr>
+    </table><br><br>
 
-<b>Host:</b> Uke Lely is not currently hosted permanently.
+    <b>Host:</b> Uke Lely is not currently hosted permanently.
 
-</div>
+  </div>
+</body>
+
 </html>
