--- a/webdev.html
+++ b/webdev.html
@@ -1,24 +1,32 @@
 <html>
-<div align="center">
-<h1>SmoreSoftware Web Team</h1>
 
-<h2>The SmoreSoftware official website wouldn't be possible without a web team, now, would it? The SmoreSoftware web team is responsible for the SmoreSoftware website and also make desktop apps in their spare time.</h2><br><br>
+<head>
+  <title>SmoreSoftware Web Team</title>
+</head>
 
-<b>Developers</b>
-<table align="center" style="width:100%">
-<tr>
-<td>TJ</td>
-<td>TJDoesCode#6088</td>
-<td>SmoreSoftware Web Developer/Administrator</td>
-</tr>
-<tr>
-<td>Chrono</td>
-<td>Chronomoly6#8108</td>
-<td>SmoreSoftware Web Designer</td>
-</tr>
-</table><br><br>
+<body>
+  <div align="center">
+    <h1>SmoreSoftware Web Team</h1>
 
-<b>Host:</b> The SmoreSofware website is hosted by GitHub and maintained by TJ.
+    <h2>The SmoreSoftware official website wouldn't be possible without a web team, now, would it? The SmoreSoftware web team is responsible for the SmoreSoftware website and also make desktop apps in their spare time.</h2><br><br>
 
-</div>
+    <b>Developers</b>
+    <table align="center" style="width:100%">
+      <tr>
+        <td>TJ</td>
+        <td>TJDoesCode#6088</td>
+        <td>SmoreSoftware Web Developer/Administrator</td>
+      </tr>
+      <tr>
+        <td>Chrono</td>
+        <td>Chronomoly6#8108</td>
+        <td>SmoreSoftware Web Designer</td>
+      </tr>
+    </table><br><br>
+
+    <b>Host:</b> The SmoreSofware website is hosted by GitHub and maintained by TJ.
+
+  </div>
+</body>
+
 </html>
