--- a/founder.html
+++ b/founder.html
@@ -1,14 +1,26 @@
 <html>
-<div align="center">
-<h1>About the founder</h1>
-<h2>"Chrono"</h2>
-<p>Hello, I am Chrono head/founder of SmoreSoftware!</p>
-<br>
-<p>Chronomoly6, aka Chrono, is the founder and head of the SmoreSoftware orginazation. He began coding this year and launched SmoreSoftware as part of him learning how to code. He codes primarily in Lua, is begining to become more and more proficient with JavaScript, and also does a little bit of HTML. His introduction to programming was wanting to making custom modifications to the game Minecraft, but after deciding that Java wasn't really his style, he got into Lua, and shortly thereafter, JavaScript. After learning some basics of Lua, he found out about the Lua library Discordia, a Discord API library for making Discord Bots. After discovering Discordia, work began on his fun little bot he had an idea for: SmoreBot. In making Discord Bots, he found a great way to use and strengthen his newfound skills while even having a little fun. After working on SmoreBot on his own for a little bit, he decided to hire some people to help him out. He hired SpaceX and Rom Typo, and the SmoreJS team was born.</p>
-<h2>TJ, <i>i think this is the correct file right?</i></h2>
-<h2>this is the story of how we hired TJ.</h2>
-<p>you were like "i got 3 people working for me for free"</p>
-<p>and i was like "ooh ooh i can code"</p>
-<p>and you were like "well they're super inactive, what harm could it do?"</p>
-</div>
+
+<head>
+  <title>About the Founder</title>
+</head>
+
+<body>
+  <div align="center">
+    <h1>About the founder</h1>
+    <h2>"Chrono"</h2>
+    <p>Hello, I am Chrono head/founder of SmoreSoftware!</p>
+    <br>
+    <p>Chronomoly6, aka Chrono, is the founder and head of the SmoreSoftware orginazation. He began coding this year and launched SmoreSoftware as part of him learning how to code. He codes primarily in Lua, is begining to become more and more proficient
+      with JavaScript, and also does a little bit of HTML. His introduction to programming was wanting to making custom modifications to the game Minecraft, but after deciding that Java wasn't really his style, he got into Lua, and shortly thereafter,
+      JavaScript. After learning some basics of Lua, he found out about the Lua library Discordia, a Discord API library for making Discord Bots. After discovering Discordia, work began on his fun little bot he had an idea for: SmoreBot. In making Discord
+      Bots, he found a great way to use and strengthen his newfound skills while even having a little fun. After working on SmoreBot on his own for a little bit, he decided to hire some people to help him out. He hired SpaceX and Rom Typo, and the SmoreJS
+      team was born.</p>
+    <h2>TJ, <i>i think this is the correct file right?</i></h2>
+    <h2>this is the story of how we hired TJ.</h2>
+    <p>you were like "i got 3 people working for me for free"</p>
+    <p>and i was like "ooh ooh i can code"</p>
+    <p>and you were like "well they're super inactive, what harm could it do?"</p>
+  </div>
+</body>
+
 </html>
