--- a/projects.html
+++ b/projects.html
@@ -1,23 +1,31 @@
 <html>
-<div align="center">
-<h1>Current Bots/Projects</h1>
 
-<h2>Bots</h2>
-<table align = "center" style="width:100%">
-    <tr>
+<head>
+  <title>Current Projects</title>
+</head>
+
+<body>
+  <div align="center">
+    <h1>Current Bots/Projects</h1>
+
+    <h2>Bots</h2>
+    <table align="center" style="width:100%">
+      <tr>
         <td><a href="smorebot.html">SmoreBot</a></td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td><a href="smorebot.js.html">SmoreBot.js</a></td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td><a href="uke-lely.html">Uke-Lely</a></td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td><a href="qbot.html">QBot</a></td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td><a href="webdev.html">SmoreSoftware Web</a></td>
-</table>
-</div>
+    </table>
+  </div>
+</body>
+
 </html>
