--- a/smorebot.html
+++ b/smorebot.html
@@ -1,28 +1,36 @@
 <html>
-<div align="center">
-<h1>SmoreBot</h1>
 
-<h2>A Discord Bot that gives attention to Smore Pop Tarts that happens to be programmed in Lua</h2><br><br>
+<head>
+  <title>SmoreBot</title>
+</head>
 
-<b>Invite SmoreBot:</b> <a href="https://discordapp.com/oauth2/authorize?client_id=290228059599142913&scope=bot&permissions=2146958463">Click Here</a><br><br>
+<body>
+  <div align="center">
+    <h1>SmoreBot</h1>
 
-<b>SmoreBot GitHub Repository:</b> <a href="https://github.com/SmoreBot/SmoreBot">Click Here</a><br><br>
+    <h2>A Discord Bot that gives attention to Smore Pop Tarts that happens to be programmed in Lua</h2><br><br>
 
-<b>Developers</b>
-<table align="center" style="width:100%">
-    <tr>
+    <b>Invite SmoreBot:</b> <a href="https://discordapp.com/oauth2/authorize?client_id=290228059599142913&scope=bot&permissions=2146958463">Click Here</a><br><br>
+
+    <b>SmoreBot GitHub Repository:</b> <a href="https://github.com/SmoreBot/SmoreBot">Click Here</a><br><br>
+
+    <b>Developers</b>
+    <table align="center" style="width:100%">
+      <tr>
         <td>Chrono</td>
         <td>Chronomly6#8108</td>
         <td>Head SmoreBot Developer</td>
-    </tr>
-    <tr>
-    <td>Jdender</td>
-    <td>jdenderplays#2316</td>
-    <td>Assistant SmoreBot Dev</td>
-  </tr>
-</table><br><br>
+      </tr>
+      <tr>
+        <td>Jdender</td>
+        <td>jdenderplays#2316</td>
+        <td>Assistant SmoreBot Dev</td>
+      </tr>
+    </table><br><br>
 
-<b>Host:</b> SmoreBot is hosted by ROM Typo.
+    <b>Host:</b> SmoreBot is hosted by ROM Typo.
 
-</div>
+  </div>
+</body>
+
 </html>
