--- a/smorebot.js.html
+++ b/smorebot.js.html
@@ -1,33 +1,42 @@
 <html>
-<div align="center">
-<h1>SmoreBot.js</h1>
 
-<h2>SmoreBot.js is the JavaScript bot written in Discord.js and Node.js it is designed to have music and server prefixes with custom settings per guild!</h2><br><br>
+<head>
+  <title>SmoreBot.js</title>
+</head>
 
-<b>Invite SmoreBot.js:</b> SmoreBot.js is currently in the process of being migrated to a new framework. The JS team is working as fast as they can to get it migrated and get some new features added before it is ready for a beta release. Stay tuned for updates.<br><br>
+<body>
+  <div align="center">
+    <h1>SmoreBot.js</h1>
 
-<b>SmoreBot.js GitHub Repository:</b> <a href="https://github.com/SmoreBot/SmoreJS">Click Here</a><br><br>
+    <h2>SmoreBot.js is the JavaScript bot written in Discord.js and Node.js it is designed to have music and server prefixes with custom settings per guild!</h2><br><br>
 
-<b>Developers</b>
-<table align="center" style="width:100%">
-    <tr>
+    <b>Invite SmoreBot.js:</b> SmoreBot.js is currently in the process of being migrated to a new framework. The JS team is working as fast as they can to get it migrated and get some new features added before it is ready for a beta release. Stay tuned
+    for updates.<br><br>
+
+    <b>SmoreBot.js GitHub Repository:</b> <a href="https://github.com/SmoreBot/SmoreJS">Click Here</a><br><br>
+
+    <b>Developers</b>
+    <table align="center" style="width:100%">
+      <tr>
         <td>Space</td>
         <td>SpaceX#0276</td>
         <td>Head of JS Team</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>TJ</td>
         <td>TJDoesCode#6088</td>
         <td>SmoreJS Maintainer/Dev</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>ROM</td>
         <td>NaM.ROM Typo#9462</td>
         <td>Assistant JS Dev</td>
-    </tr>
-</table><br><br>
+      </tr>
+    </table><br><br>
 
-<b>Host:</b> SmoreBot.js is hosted by Space.
+    <b>Host:</b> SmoreBot.js is hosted by Space.
 
-</div>
+  </div>
+</body>
+
 </html>
