added a couple line breaks

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Welcome to SmoreSoftware!</h1>
     <h2>SmoreSoftware is a development group familar with JS and Lua that makes Discord Bots!</h2>
 
-    <a href="/team.html">The Team</a>
+    <a href="/team.html">The Team</a><br><br>
 
-    <a href="/projects.html">Current Projects</a>
+    <a href="/projects.html">Current Projects</a><br><br>
 
-    <a href="/founder.html">About the Founder</a>
+    <a href="/founder.html">About the Founder</a><br><br>
 
-    <a href="/contact.html">Contact the Developers</a>
+    <a href="/contact.html">Contact the Developers</a><br><br>
   </div>
 </body>
 
