--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <head>
   <title>SmoreSoftware Official</title>
+  <link rel="stylesheet" type="text/css" href="style1.css">
 </head>
 
 <body>
-  <div align="center">
+  <div id="home" align="center">
 
     <h1>Welcome to SmoreSoftware!</h1>
     <h2>SmoreSoftware is a development group familar with JS and Lua that makes Discord Bots!</h2>
