--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>SmoreSoftware Official</title>
-  <link rel="stylesheet" type="text/css" href="style1.css">
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
