changed from div to body

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
-<body>
-  <div id="home" align="center">
+<body id="home">
+  <div align="center">
 
     <h1>Welcome to SmoreSoftware!</h1>
     <h2>SmoreSoftware is a development group familar with JS and Lua that makes Discord Bots!</h2>
