changed host status

--- a/webdev.html
+++ b/webdev.html
@@ -24,7 +24,7 @@
       </tr>
     </table><br><br>
 
-    <b>Host:</b> The SmoreSofware website is hosted by GitHub and maintained by TJ.
+    <b>Host:</b> The SmoreSofware website is currently hosted by GitHub and maintained by TJ. It is also in the process of being migrated to ROM's host server and will soon be relocated. TJ will remain in control of maintenance and upkeep.
 
   </div>
 </body>
