added contact (functional)

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,29 @@
 <html>
-<script method="contact.php" type="POST"></script>
+
+<head>
+  <title>Contact the Developers</title>
+  <form action="contact.php" method="post">
+</head>
+
+<body>
+  <div align="center">
+    <table border="0">
+      <tr>
+        <td>Name</td>
+        <td align="center"><input type="text" name="username" size="200" /></td>
+      </tr>
+      <tr>
+        <td>Email Address</td>
+        <td align="center"><input type="text" name="emailaddress" size="200" /></td>
+      </tr>
+      <tr>
+        <td>Message</td>
+        <td align="center"><input type="text" name="message" width="200" length="500" /></td>
+      </tr>
+      <tr>
+        <td colspan="2" align="center"><input type="submit" value="Submit" /></td>
+      </tr>
+  </div>
+</body>
+
 </html>
