--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,15 @@
     <table border="0">
       <tr>
         <td>Name</td>
-        <td align="center"><input type="text" name="username" size="200" /></td>
+        <td align="center"><input type="text" name="username" size="50" /></td>
       </tr>
       <tr>
         <td>Email Address</td>
-        <td align="center"><input type="text" name="emailaddress" size="200" /></td>
+        <td align="center"><input type="text" name="emailaddress" size="50" /></td>
       </tr>
       <tr>
         <td>Message</td>
-        <td align="center"><input type="text" name="message" width="200" length="500" /></td>
+        <td align="center"><textarea name="message" rows="4" cols="50" /></td>
       </tr>
       <tr>
         <td colspan="2" align="center"><input type="submit" value="Submit" /></td>
