--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       </tr>
       <tr>
         <td>Message</td>
-        <td align="center"><textarea id="message" rows="4" cols="50" /></td>
+        <td align="center"><textarea id="message" rows="4" cols="50"></textarea></td>
       </tr>
       <tr>
         <td colspan="2" align="center"><input type="submit" value="Submit" /></td>
