--- a/contact.html
+++ b/contact.html
@@ -2,27 +2,30 @@
 
 <head>
   <title>Contact the Developers</title>
-  <form action="contact.php" method="post">
 </head>
 
 <body>
   <div align="center">
+    <h2>Contact the Developers</h2><br/><br/>
     <table border="0">
-      <tr>
-        <td>Name</td>
-        <td align="center"><input type="text" name="username" size="50" /></td>
-      </tr>
-      <tr>
-        <td>Email Address</td>
-        <td align="center"><input type="text" name="emailaddress" size="50" /></td>
-      </tr>
-      <tr>
-        <td>Message</td>
-        <td align="center"><textarea id="message" rows="4" cols="50"></textarea></td>
-      </tr>
-      <tr>
-        <td colspan="2" align="center"><input type="submit" value="Submit" /></td>
-      </tr>
+      <form action="contact.php" method="post">
+        <tr>
+          <td>Name</td>
+          <td align="center"><input type="text" name="username" size="50" /></td>
+        </tr>
+        <tr>
+          <td>Email Address</td>
+          <td align="center"><input type="text" name="emailaddress" size="75" /></td>
+        </tr>
+        <tr>
+          <td>Message</td>
+          <td align="center"><textarea id="message" rows="6" cols="50"></textarea></td>
+        </tr>
+        <tr>
+          <td colspan="2" align="center"><input type="submit" value="Submit" /></td>
+        </tr>
+      </form>
+    </table>
   </div>
 </body>
 
