changed contact page to redirect to broken.html

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,14 @@
 </head>
 
 <body>
+  <!---this is currently broken.
+  when this page redirects to the contact.php page,
+  a "405 NOT ALLOWED" error is thrown.
+  this usually traces to either a problem with
+  the ISP or the way the site is configured.
+  a fix is on the way, but for the time being,
+  this page will redirect to broken.html
+  --->
   <div align="center">
     <h2>Contact the Developers</h2><br/><br/>
     <table border="0">
