--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <a href="/founder.html">About the Founder</a><br><br>
 
-    <a href="/contact.html">Contact the Developers</a><br><br>
+    <a href="/broken.html">Contact the Developers</a><br><br>
   </div>
 </body>
 
