commented out to prevent manually accessing page

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,10 @@
   a fix is on the way, but for the time being,
   this page will redirect to broken.html
   --->
+
+  <p>This is currently broken.</p>
+
+  <!---
   <div align="center">
     <h2>Contact the Developers</h2><br/><br/>
     <table border="0">
@@ -89,6 +93,7 @@ src="http://www.SnapHost.com/captcha/CaptchaImage.aspx?id=98RBYCJNYUFW&ImgType=2
       </form>
     </table>
   </div>
+  --->
 </body>
 
 </html>
