--- a/founder.html
+++ b/founder.html
@@ -8,13 +8,12 @@
   <div align="center">
     <h1>About the founder</h1>
     <h2>"Chrono"</h2>
-    <p>Hello, I am Chrono head/founder of SmoreSoftware!</p>
-    <br>
+    <p>Hello, I am Chrono head/founder of SmoreSoftware!</p><br/><br/>
     <p>Chronomoly6, aka Chrono, is the founder and head of the SmoreSoftware orginazation. He began coding this year and launched SmoreSoftware as part of him learning how to code. He codes primarily in Lua, is begining to become more and more proficient
       with JavaScript, and also does a little bit of HTML. His introduction to programming was wanting to making custom modifications to the game Minecraft, but after deciding that Java wasn't really his style, he got into Lua, and shortly thereafter,
-      JavaScript. After learning some basics of Lua, he found out about the Lua library Discordia, a Discord API library for making Discord Bots. After discovering Discordia, work began on his fun little bot he had an idea for: SmoreBot. In making Discord
-      Bots, he found a great way to use and strengthen his newfound skills while even having a little fun. After working on SmoreBot on his own for a little bit, he decided to hire some people to help him out. He hired SpaceX and Rom Typo, and the SmoreJS
-      team was born.</p>
+      JavaScript. After learning some basics of Lua, his friend jdender introduced him to the Lua library Discordia, a Discord API library for making Discord Bots. After discovering Discordia, work began on his fun little bot he had an idea for: SmoreBot.
+      In making Discord Bots, he found a great way to use and strengthen his newfound skills while even having a little fun. After working on SmoreBot on his own for a little bit, he decided to hire some people to help him out. Of course, the first person
+      was he reached out to was his friend jdender, because without him, SmoreSoftware would be nothing. Together, they started work on the Lua side of the team, the SmoreBot team. Then, he hired SpaceX and Rom Typo, and the SmoreJS team was born.</p><br/><br/>
     <h2>TJ, <i>i think this is the correct file right?</i></h2>
     <h2>this is the story of how we hired TJ.</h2>
     <p>you were like "i got 3 people working for me for free"</p>
