added home button & more

--- a/broken.html
+++ b/broken.html
@@ -2,10 +2,14 @@
 
 <head>
   <title>Uh-Oh!</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
   <div align="center">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
     <h1>Oh no, something's broken!</h1><br/><br/>
 
     <p>It looks like the thing you have tried to reach is currently broken. Our web team is working as fast as they can to get this issue fixed.</p>
