--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
     <a href="/founder.html">About the Founder</a><br><br>
 
-    <a href="/broken.html">Contact the Developers</a><br><br>
+    <a href="/broken.html">Contact the Developers</a><br><br><br><br>
+
+  </div>
+  <div id="widget">
+    <iframe src="https://discordapp.com/widget?id=282977399761666059&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
   </div>
 </body>
 
