--- a/projects.html
+++ b/projects.html
@@ -2,14 +2,18 @@
 
 <head>
   <title>Current Projects</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
   <div align="center">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
     <h1>Current Bots/Projects</h1>
 
     <h2>Bots</h2>
-    <table align="center" style="width:100%">
+    <table id="projects" align="center" style="width:100%">
       <tr>
         <td><a href="smorebot.html">SmoreBot</a></td>
       </tr>
