--- a/qbot.html
+++ b/qbot.html
@@ -2,29 +2,33 @@
 
 <head>
   <title>QBot</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
   <div align="center">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
     <h1>QBot</h1>
 
     <h2>A Bot who's main purpose is quoting user's messages!</h2><br><br>
 
     <b>Invite QBot:</b> <a href="https://discordapp.com/oauth2/authorize?client_id=322882931746013185&scope=bot&permissions=2146958463">Click Here</a><br><br>
 
-    <b>QBot GitHub Repository:</b> <a href="https://github.com/SmoreBot/QBot">Click Here</a><br><br>
+    <b>QBot GitHub Repository:</b> <a href="https://github.com/SmoreSoftware/QBot">Click Here</a><br><br>
 
     <b>Developers</b>
-    <table align="center" style="width:100%">
+    <table class="nicetable" align="center" style="width:100%">
       <tr>
-        <td>Chrono</td>
-        <td>Chronomly6#8108</td>
-        <td>Head QBot Developer</td>
+        <td class="nicetable">Chrono</td>
+        <td class="nicetable">Chronomly6#8108</td>
+        <td class="nicetable">Head QBot Developer</td>
       </tr>
       <tr>
-        <td>TJ</td>
-        <td>TJDoesCode#6088</td>
-        <td>QBot Maintainer/Dev</td>
+        <td class="nicetable">TJ</td>
+        <td class="nicetable">TJDoesCode#6088</td>
+        <td class="nicetable">QBot Maintainer/Dev</td>
       </tr>
     </table><br><br>
 
