--- a/team.html
+++ b/team.html
@@ -2,47 +2,52 @@
 
 <head>
   <title>The Team</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
   <div align="center">
-    <b>The Team</b>
-    <table align="center" style="width:100%">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
+    <h1>The SmoreSoftware Team</h1><br><br>
+
+    <table class="nicetable" align="center" style="width:100%">
       <tr>
-        <th>Name</th>
-        <th>Discord Tag</th>
-        <th>Team(s)</th>
-        <th>Job</th>
+        <th class="nicetable">Name</th>
+        <th class="nicetable">Discord Tag</th>
+        <th class="nicetable">Team(s)</th>
+        <th class="nicetable">Job</th>
       </tr>
       <tr>
-        <td>Chrono</td>
-        <td>Chronomly6#8108</td>
-        <td>All</td>
-        <td>Head of SmoreSoftware</td>
+        <td class="nicetable">Chrono</td>
+        <td class="nicetable">Chronomly6#8108</td>
+        <td class="nicetable">All</td>
+        <td class="nicetable">Head of SmoreSoftware</td>
       </tr>
       <tr>
-        <td>TJ</td>
-        <td>TJDoesCode#6088</td>
-        <td>SmoreJS, QBot, Web</td>
-        <td>SmoreSoftware Maintainer</td>
+        <td class="nicetable">TJ</td>
+        <td class="nicetable">TJDoesCode#6088</td>
+        <td class="nicetable">SmoreJS, QBot, Web</td>
+        <td class="nicetable">SmoreSoftware Maintainer</td>
       </tr>
       <tr>
-        <td>Jdender</td>
-        <td>jdenderplays#2316</td>
-        <td>SmoreBot</td>
-        <td>Assistant Lua Dev</td>
+        <td class="nicetable">Jdender</td>
+        <td class="nicetable">jdenderplays#2316</td>
+        <td class="nicetable">SmoreBot</td>
+        <td class="nicetable">Assistant Lua Dev</td>
       </tr>
       <tr>
-        <td>Space</td>
-        <td>SpaceX#0276</td>
-        <td>SmoreJS, Host</td>
-        <td>Head of JS Team, Assistant Host</td>
+        <td class="nicetable">Space</td>
+        <td class="nicetable">SpaceX#0276</td>
+        <td class="nicetable">SmoreJS, Host</td>
+        <td class="nicetable">Head of JS Team, Assistant Host</td>
       </tr>
       <tr>
-        <td>ROM</td>
-        <td>NaM.ROM Typo#9462</td>
-        <td>SmoreJS, Host</td>
-        <td>Assistant JS Dev, Head Host</td>
+        <td class="nicetable">ROM</td>
+        <td class="nicetable">ROM Typo#9462</td>
+        <td class="nicetable">SmoreJS, Host</td>
+        <td class="nicetable">Assistant JS Dev, Head Host</td>
       </tr>
     </table>
   </div>
