--- a/webdev.html
+++ b/webdev.html
@@ -2,25 +2,29 @@
 
 <head>
   <title>SmoreSoftware Web Team</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
   <div align="center">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
     <h1>SmoreSoftware Web Team</h1>
 
     <h2>The SmoreSoftware official website wouldn't be possible without a web team, now, would it? The SmoreSoftware web team is responsible for the SmoreSoftware website and also make desktop apps in their spare time.</h2><br><br>
 
     <b>Developers</b>
-    <table align="center" style="width:100%">
+    <table class="nicetable" align="center" style="width:100%">
       <tr>
-        <td>TJ</td>
-        <td>TJDoesCode#6088</td>
-        <td>SmoreSoftware Web Developer/Administrator</td>
+        <td class="nicetable">TJ</td>
+        <td class="nicetable">TJDoesCode#6088</td>
+        <td class="nicetable">SmoreSoftware Web Developer/Administrator</td>
       </tr>
       <tr>
-        <td>Chrono</td>
-        <td>Chronomoly6#8108</td>
-        <td>SmoreSoftware Web Designer</td>
+        <td class="nicetable">Chrono</td>
+        <td class="nicetable">Chronomoly6#8108</td>
+        <td class="nicetable">SmoreSoftware Web Designer</td>
       </tr>
     </table><br><br>
 
