--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Contact the Developers</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
@@ -15,6 +16,9 @@
   --->
 
   <div align="center">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
     <h2>Contact the Developers</h2><br/><br/>
     <table border="0">
       <form action="contact.php" method="post">
