--- a/founder.html
+++ b/founder.html
@@ -2,10 +2,14 @@
 
 <head>
   <title>About the Founder</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
   <div align="center">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
     <h1>About the founder</h1>
     <h2>"Chrono"</h2>
     <p>Hello, I am Chrono head/founder of SmoreSoftware!</p><br/><br/>
