--- a/smorebot.html
+++ b/smorebot.html
@@ -2,29 +2,33 @@
 
 <head>
   <title>SmoreBot</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
   <div align="center">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
     <h1>SmoreBot</h1>
 
     <h2>A Discord Bot that gives attention to Smore Pop Tarts that happens to be programmed in Lua</h2><br><br>
 
     <b>Invite SmoreBot:</b> <a href="https://discordapp.com/oauth2/authorize?client_id=290228059599142913&scope=bot&permissions=2146958463">Click Here</a><br><br>
 
-    <b>SmoreBot GitHub Repository:</b> <a href="https://github.com/SmoreBot/SmoreBot">Click Here</a><br><br>
+    <b>SmoreBot GitHub Repository:</b> <a href="https://github.com/SmoreSoftware/SmoreBot">Click Here</a><br><br>
 
     <b>Developers</b>
-    <table align="center" style="width:100%">
+    <table class="nicetable" align="center" style="width:100%">
       <tr>
-        <td>Chrono</td>
-        <td>Chronomly6#8108</td>
-        <td>Head SmoreBot Developer</td>
+        <td class="nicetable">Chrono</td>
+        <td class="nicetable">Chronomly6#8108</td>
+        <td class="nicetable">Head SmoreBot Developer</td>
       </tr>
       <tr>
-        <td>Jdender</td>
-        <td>jdenderplays#2316</td>
-        <td>Assistant SmoreBot Dev</td>
+        <td class="nicetable">Jdender</td>
+        <td class="nicetable">jdenderplays#2316</td>
+        <td class="nicetable">Assistant SmoreBot Dev</td>
       </tr>
     </table><br><br>
 
