--- a/smorebot.js.html
+++ b/smorebot.js.html
@@ -2,10 +2,14 @@
 
 <head>
   <title>SmoreBot.js</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
   <div align="center">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
     <h1>SmoreBot.js</h1>
 
     <h2>SmoreBot.js is the JavaScript bot written in Discord.js and Node.js it is designed to have music and server prefixes with custom settings per guild!</h2><br><br>
@@ -13,24 +17,24 @@
     <b>Invite SmoreBot.js:</b> SmoreBot.js is currently in the process of being migrated to a new framework. The JS team is working as fast as they can to get it migrated and get some new features added before it is ready for a beta release. Stay tuned
     for updates.<br><br>
 
-    <b>SmoreBot.js GitHub Repository:</b> <a href="https://github.com/SmoreBot/SmoreJS">Click Here</a><br><br>
+    <b>SmoreBot.js GitHub Repository:</b> <a href="https://github.com/SmoreSoftware/SmoreJS">Click Here</a><br><br>
 
     <b>Developers</b>
-    <table align="center" style="width:100%">
+    <table class="nicetable" align="center" style="width:100%">
       <tr>
-        <td>Space</td>
-        <td>SpaceX#0276</td>
-        <td>Head of JS Team</td>
+        <td class="nicetable">Space</td>
+        <td class="nicetable">SpaceX#0276</td>
+        <td class="nicetable">Head of JS Team</td>
       </tr>
       <tr>
-        <td>TJ</td>
-        <td>TJDoesCode#6088</td>
-        <td>SmoreJS Maintainer/Dev</td>
+        <td class="nicetable">TJ</td>
+        <td class="nicetable">TJDoesCode#6088</td>
+        <td class="nicetable">SmoreJS Maintainer/Dev</td>
       </tr>
       <tr>
-        <td>ROM</td>
-        <td>NaM.ROM Typo#9462</td>
-        <td>Assistant JS Dev</td>
+        <td class="nicetable">ROM</td>
+        <td class="nicetable">NaM.ROM Typo#9462</td>
+        <td class="nicetable">Assistant JS Dev</td>
       </tr>
     </table><br><br>
 
