--- a/uke-lely.html
+++ b/uke-lely.html
@@ -2,10 +2,14 @@
 
 <head>
   <title>Uke Lely</title>
+  <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 
 <body>
   <div align="center">
+    <form method="get" action="/">
+      <input type="submit" class="homeButton" value="">
+    </form>
     <h1>Uke Lely</h1>
 
     <h2>A ukelele themed discord bot</h2><br><br>
@@ -15,11 +19,11 @@
     <b>Uke Lely GitHub Repository:</b> <a href="https://github.com/SmoreBot/Uke-Lely">Click Here</a><br><br>
 
     <b>Developers</b>
-    <table align="center" style="width:100%">
+    <table class="nicetable" align="center" style="width:100%">
       <tr>
-        <td>Chrono</td>
-        <td>Chronomly6#8108</td>
-        <td>Head Uke Lely Developer</td>
+        <td class="nicetable">Chrono</td>
+        <td class="nicetable">Chronomly6#8108</td>
+        <td class="nicetable">Head Uke Lely Developer</td>
       </tr>
     </table><br><br>
 
