added head div for nicer styling

--- a/broken.html
+++ b/broken.html
@@ -7,9 +7,13 @@
 
 <body>
   <div align="center">
-    <form method="get" action="/">
-      <input type="submit" class="homeButton" value="">
-    </form>
+
+    <div class="head">
+      <form method="get" action="/">
+        <input type="submit" class="homeButton" value="">
+      </form>
+    </div>
+
     <h1>Oh no, something's broken!</h1><br/><br/>
 
     <p>It looks like the thing you have tried to reach is currently broken. Our web team is working as fast as they can to get this issue fixed.</p>
