--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,13 @@
   --->
 
   <div align="center">
-    <form method="get" action="/">
-      <input type="submit" class="homeButton" value="">
-    </form>
+
+    <div class="head">
+      <form method="get" action="/">
+        <input type="submit" class="homeButton" value="">
+      </form>
+    </div>
+
     <h2>Contact the Developers</h2><br/><br/>
     <table border="0">
       <form action="contact.php" method="post">
