--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <body id="home">
   <div align="center">
 
+    <div id="repoButton">
+      <form method="get" action="https://github.com/SmoreSoftware">
+        <input type="submit" class="homeButton" value="">
+      </form>
+    </div>
+
     <h1>Welcome to SmoreSoftware!</h1>
     <h2>SmoreSoftware is a development group familar with JS and Lua that makes Discord Bots!</h2>
 
