--- a/qbot.html
+++ b/qbot.html
@@ -7,9 +7,13 @@
 
 <body>
   <div align="center">
-    <form method="get" action="/">
-      <input type="submit" class="homeButton" value="">
-    </form>
+
+    <div class="head">
+      <form method="get" action="/">
+        <input type="submit" class="homeButton" value="">
+      </form>
+    </div>
+
     <h1>QBot</h1>
 
     <h2>A Bot who's main purpose is quoting user's messages!</h2><br><br>
