--- a/smorebot.html
+++ b/smorebot.html
@@ -7,9 +7,13 @@
 
 <body>
   <div align="center">
-    <form method="get" action="/">
-      <input type="submit" class="homeButton" value="">
-    </form>
+
+    <div class="head">
+      <form method="get" action="/">
+        <input type="submit" class="homeButton" value="">
+      </form>
+    </div>
+
     <h1>SmoreBot</h1>
 
     <h2>A Discord Bot that gives attention to Smore Pop Tarts that happens to be programmed in Lua</h2><br><br>
