--- a/team.html
+++ b/team.html
@@ -7,9 +7,13 @@
 
 <body>
   <div align="center">
-    <form method="get" action="/">
-      <input type="submit" class="homeButton" value="">
-    </form>
+
+    <div class="head">
+      <form method="get" action="/">
+        <input type="submit" class="homeButton" value="">
+      </form>
+    </div>
+
     <h1>The SmoreSoftware Team</h1><br><br>
 
     <table class="nicetable" align="center" style="width:100%">
