--- a/uke-lely.html
+++ b/uke-lely.html
@@ -7,9 +7,13 @@
 
 <body>
   <div align="center">
-    <form method="get" action="/">
-      <input type="submit" class="homeButton" value="">
-    </form>
+
+    <div class="head">
+      <form method="get" action="/">
+        <input type="submit" class="homeButton" value="">
+      </form>
+    </div>
+
     <h1>Uke Lely</h1>
 
     <h2>A ukelele themed discord bot</h2><br><br>
