--- a/founder.html
+++ b/founder.html
@@ -7,9 +7,13 @@
 
 <body>
   <div align="center">
-    <form method="get" action="/">
-      <input type="submit" class="homeButton" value="">
-    </form>
+
+    <div class="head">
+      <form method="get" action="/">
+        <input type="submit" class="homeButton" value="">
+      </form>
+    </div>
+
     <h1>About the founder</h1>
     <h2>"Chrono"</h2>
     <p>Hello, I am Chrono head/founder of SmoreSoftware!</p><br/><br/>
