--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,13 @@
 
 <body>
   <div align="center">
-    <form method="get" action="/">
-      <input type="submit" class="homeButton" value="">
-    </form>
+
+    <div class="head">
+      <form method="get" action="/">
+        <input type="submit" class="homeButton" value="">
+      </form>
+    </div>
+
     <h1>Current Bots/Projects</h1>
 
     <h2>Bots</h2>
