--- a/webdev.html
+++ b/webdev.html
@@ -37,7 +37,7 @@
       </tr>
     </table><br><br>
 
-    <b>Host:</b> The SmoreSofware website is currently hosted by GitHub and maintained by TJ. It is also in the process of being migrated to ROM's host server and will soon be relocated. TJ will remain in control of maintenance and upkeep.
+    <b>Host:</b> The SmoreSofware website is currently hosted on ROM's server. TJ is in control of maintenance, administration, and upkeep. ROM is in control of scripting and other high-level back-end tasks.
 
   </div>
 </body>
