--- a/webdev.html
+++ b/webdev.html
@@ -23,7 +23,7 @@
       <tr>
         <td class="nicetable">TJ</td>
         <td class="nicetable">TJDoesCode#6088</td>
-        <td class="nicetable">SmoreSoftware Web Developer/Administrator</td>
+        <td class="nicetable">SmoreSoftware Web Head</td>
       </tr>
       <tr>
         <td class="nicetable">ROM</td>
@@ -33,7 +33,7 @@
       <tr>
         <td class="nicetable">Chrono</td>
         <td class="nicetable">Chronomoly6#8108</td>
-        <td class="nicetable">SmoreSoftware Web Designer</td>
+        <td class="nicetable">SmoreSoftware Web Supervisor</td>
       </tr>
     </table><br><br>
 
