--- a/team.html
+++ b/team.html
@@ -32,8 +32,20 @@
       <tr>
         <td class="nicetable">TJ</td>
         <td class="nicetable">TJDoesCode#6088</td>
-        <td class="nicetable">SmoreJS, QBot, Web</td>
+        <td class="nicetable">All</td>
         <td class="nicetable">SmoreSoftware Maintainer</td>
+      </tr>
+      <tr>
+        <td class="nicetable">ROM</td>
+        <td class="nicetable">ROM Typo#9462</td>
+        <td class="nicetable">Host, SmoreJS</td>
+        <td class="nicetable">Head Host, Assistant JS Dev</td>
+      </tr>
+      <tr>
+        <td class="nicetable">Space</td>
+        <td class="nicetable">SpaceX#0276</td>
+        <td class="nicetable">Host, SmoreJS</td>
+        <td class="nicetable">Assistant Host, Head of JS Team</td>
       </tr>
       <tr>
         <td class="nicetable">Jdender</td>
@@ -41,18 +53,8 @@
         <td class="nicetable">SmoreBot</td>
         <td class="nicetable">Assistant Lua Dev</td>
       </tr>
-      <tr>
-        <td class="nicetable">Space</td>
-        <td class="nicetable">SpaceX#0276</td>
-        <td class="nicetable">SmoreJS, Host</td>
-        <td class="nicetable">Head of JS Team, Assistant Host</td>
-      </tr>
-      <tr>
-        <td class="nicetable">ROM</td>
-        <td class="nicetable">ROM Typo#9462</td>
-        <td class="nicetable">SmoreJS, Host</td>
-        <td class="nicetable">Assistant JS Dev, Head Host</td>
-      </tr>
+
+
     </table>
   </div>
 </body>
