changed to self-closing line breaks

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <h1>Welcome to SmoreSoftware!</h1>
     <h2>SmoreSoftware is a development group familar with JS and Lua that makes Discord Bots!</h2>
 
-    <a href="/team.html">The Team</a><br><br>
+    <a href="/team.html">The Team</a><br/><br/>
 
-    <a href="/projects.html">Current Projects</a><br><br>
+    <a href="/projects.html">Current Projects</a><br/><br/>
 
-    <a href="/founder.html">About the Founder</a><br><br>
+    <a href="/founder.html">About the Founder</a><br/><br/>
 
-    <a href="/broken.html">Contact the Developers</a><br><br><br><br>
+    <a href="/broken.html">Contact the Developers</a><br/><br/><br/><br/>
 
   </div>
   <div id="widget">
