--- a/smorebot.html
+++ b/smorebot.html
@@ -16,11 +16,11 @@
 
     <h1>SmoreBot</h1>
 
-    <h2>A Discord Bot that gives attention to Smore Pop Tarts that happens to be programmed in Lua</h2><br><br>
+    <h2>A Discord Bot that gives attention to Smore Pop Tarts that happens to be programmed in Lua</h2><br/><br/>
 
-    <b>Invite SmoreBot:</b> <a href="https://discordapp.com/oauth2/authorize?client_id=290228059599142913&scope=bot&permissions=2146958463">Click Here</a><br><br>
+    <b>Invite SmoreBot:</b> <a href="https://discordapp.com/oauth2/authorize?client_id=290228059599142913&scope=bot&permissions=2146958463">Click Here</a><br/><br/>
 
-    <b>SmoreBot GitHub Repository:</b> <a href="https://github.com/SmoreSoftware/SmoreBot">Click Here</a><br><br>
+    <b>SmoreBot GitHub Repository:</b> <a href="https://github.com/SmoreSoftware/SmoreBot">Click Here</a><br/><br/>
 
     <b>Developers</b>
     <table class="nicetable" align="center" style="width:100%">
@@ -34,7 +34,7 @@
         <td class="nicetable">jdenderplays#2316</td>
         <td class="nicetable">Assistant SmoreBot Dev</td>
       </tr>
-    </table><br><br>
+    </table><br/><br/>
 
     <b>Host:</b> SmoreBot is hosted by ROM Typo.
 
