--- a/uke-lely.html
+++ b/uke-lely.html
@@ -16,11 +16,11 @@
 
     <h1>Uke Lely</h1>
 
-    <h2>A ukelele themed discord bot</h2><br><br>
+    <h2>A ukelele themed discord bot</h2><br/><br/>
 
-    <b>Invite Uke Lely:</b> At this time, Uke Lely is still at an early stage of development, and is unavailable to the public. Chrono hopes that it will reach a beta release soon.<br><br>
+    <b>Invite Uke Lely:</b> At this time, Uke Lely is still at an early stage of development, and is unavailable to the public. Chrono hopes that it will reach a beta release soon.<br/><br/>
 
-    <b>Uke Lely GitHub Repository:</b> <a href="https://github.com/SmoreBot/Uke-Lely">Click Here</a><br><br>
+    <b>Uke Lely GitHub Repository:</b> <a href="https://github.com/SmoreBot/Uke-Lely">Click Here</a><br/><br/>
 
     <b>Developers</b>
     <table class="nicetable" align="center" style="width:100%">
@@ -29,7 +29,7 @@
         <td class="nicetable">Chronomly6#8108</td>
         <td class="nicetable">Head Uke Lely Developer</td>
       </tr>
-    </table><br><br>
+    </table><br/><br/>
 
     <b>Host:</b> Uke Lely is not currently hosted permanently.
 
