--- a/webdev.html
+++ b/webdev.html
@@ -16,7 +16,7 @@
 
     <h1>SmoreSoftware Web Team</h1>
 
-    <h2>The SmoreSoftware official website wouldn't be possible without a web team, now, would it? The SmoreSoftware web team is responsible for the SmoreSoftware website and also make desktop apps in their spare time.</h2><br><br>
+    <h2>The SmoreSoftware official website wouldn't be possible without a web team, now, would it? The SmoreSoftware web team is responsible for the SmoreSoftware website and also make desktop apps in their spare time.</h2><br/><br/>
 
     <b>Developers</b>
     <table class="nicetable" align="center" style="width:100%">
@@ -35,7 +35,7 @@
         <td class="nicetable">Chronomoly6#8108</td>
         <td class="nicetable">SmoreSoftware Web Supervisor</td>
       </tr>
-    </table><br><br>
+    </table><br/><br/>
 
     <b>Host:</b> The SmoreSofware website is currently hosted on ROM's server. TJ is in control of maintenance, administration, and upkeep. ROM is in control of scripting and other high-level back-end tasks.
 
