--- a/qbot.html
+++ b/qbot.html
@@ -16,11 +16,11 @@
 
     <h1>QBot</h1>
 
-    <h2>A Bot who's main purpose is quoting user's messages!</h2><br><br>
+    <h2>A Bot who's main purpose is quoting user's messages!</h2><br/><br/>
 
-    <b>Invite QBot:</b> <a href="https://discordapp.com/oauth2/authorize?client_id=322882931746013185&scope=bot&permissions=2146958463">Click Here</a><br><br>
+    <b>Invite QBot:</b> <a href="https://discordapp.com/oauth2/authorize?client_id=322882931746013185&scope=bot&permissions=2146958463">Click Here</a><br/><br/>
 
-    <b>QBot GitHub Repository:</b> <a href="https://github.com/SmoreSoftware/QBot">Click Here</a><br><br>
+    <b>QBot GitHub Repository:</b> <a href="https://github.com/SmoreSoftware/QBot">Click Here</a><br/><br/>
 
     <b>Developers</b>
     <table class="nicetable" align="center" style="width:100%">
@@ -34,7 +34,7 @@
         <td class="nicetable">TJDoesCode#6088</td>
         <td class="nicetable">QBot Maintainer/Dev</td>
       </tr>
-    </table><br><br>
+    </table><br/><br/>
 
     <b>Host:</b> QBot is hosted by Space.
 
