--- a/smorebot.js.html
+++ b/smorebot.js.html
@@ -16,12 +16,12 @@
 
     <h1>SmoreBot.js</h1>
 
-    <h2>SmoreBot.js is the JavaScript bot written in Discord.js and Node.js it is designed to have music and server prefixes with custom settings per guild!</h2><br><br>
+    <h2>SmoreBot.js is the JavaScript bot written in Discord.js and Node.js it is designed to have music and server prefixes with custom settings per guild!</h2><br/><br/>
 
     <b>Invite SmoreBot.js:</b> SmoreBot.js is currently in the process of being migrated to a new framework. The JS team is working as fast as they can to get it migrated and get some new features added before it is ready for a beta release. Stay tuned
-    for updates.<br><br>
+    for updates.<br/><br/>
 
-    <b>SmoreBot.js GitHub Repository:</b> <a href="https://github.com/SmoreSoftware/SmoreJS">Click Here</a><br><br>
+    <b>SmoreBot.js GitHub Repository:</b> <a href="https://github.com/SmoreSoftware/SmoreJS">Click Here</a><br/><br/>
 
     <b>Developers</b>
     <table class="nicetable" align="center" style="width:100%">
@@ -40,7 +40,7 @@
         <td class="nicetable">NaM.ROM Typo#9462</td>
         <td class="nicetable">Assistant JS Dev</td>
       </tr>
-    </table><br><br>
+    </table><br/><br/>
 
     <b>Host:</b> SmoreBot.js is hosted by Space.
 
