--- a/team.html
+++ b/team.html
@@ -14,7 +14,7 @@
       </form>
     </div>
 
-    <h1>The SmoreSoftware Team</h1><br><br>
+    <h1>The SmoreSoftware Team</h1><br/><br/>
 
     <table class="nicetable" align="center" style="width:100%">
       <tr>
@@ -52,8 +52,9 @@
         <td class="nicetable">jdenderplays#2316</td>
         <td class="nicetable">SmoreBot</td>
         <td class="nicetable">Assistant Lua Dev</td>
-      </tr>
+      </tr><br/><br/>
 
+      <h2>Job Descriptions</h2><br/><br/>
 
     </table>
   </div>
