added job descriptions

--- a/team.html
+++ b/team.html
@@ -56,6 +56,47 @@
 
       <h2>Job Descriptions</h2><br/><br/>
 
+      <b>Head of SmoreSoftware:</b><br/>
+      <p>The Head of SmoreSoftware is basically the CEO. He is in charge of everything that happens at SmoreSoftware. The power he posseses is great. His duties include creating new teams, killing old projects, approving or denying new propositions, reassigning
+        individual developers to different teams, overseeing all work and deciding if he is happy with the code the teams are providing, assisting Team Heads with anything they may need assistance with, doing development where he sees fit, and much more.
+        If he decides that a team is not producing acceptable work or making progress on their project, he will do what he sees fit in order to keep SmoreSoftware at its best. He may disband a team, assign a new head, or restructure the team's individual
+        coders whenever he may want.
+        <br/>In short: Head of SmoreSoftware = God.</p><br/><br/>
+
+      <b>SmoreSoftware Maintainer:</b><br/>
+      <p>The SmoreSoftware Maintainer is essentially the Head's right-hand man. He is responsible for keeping all projects active and making updates to the code whenever they may be needed. His duties include making uodates to active projects whenever needed,
+        proposing changes to other teams he is not actively involved in the development of, making pull requests with changes or updates ot repositories he does not have write access to, working as an individual coder on the projects he was assigned to
+        do notmal work on, and whatever else the Head designates for him to do. He may make a pull request to a project he does not work on with a rough version of a new feature for the team's induvidual coders to code up from and fix any errors caused
+        by the addition. Most of his work is on the JavaScript projects, where he works as a full developer on all projects, but he does add some feautres to the Lua projects. He is also currently in charge of most lower-level website administration and
+        maintenance and the bulk of the web design and development.
+        <br/>In short: SmoreSoftware Maintainer = SmoreSoftware's garbage man.</p><br/><br/>
+
+      <b>Head Host for SmoreSoftware</b><br/>
+      <p>The Head Host for Smoresoftware is in charge of making sure all SmoreSoftware projects have a nice, warm place to live. His duties include overseeing the hosting of all projects, designating the hosting of some projects to the assistant host, performing
+        adminstration and hosting maintenance to the projects he hosts, and making sure the uptime of all projects is acceptable. The projects he is currently overseeing are the main SmoreSoftware bot, SmoreBot (the Lua bot) and the website. His duties
+        for the hosting of the website include hosting it on his server, keeping cPanel functional, making sure the website is up, and preforming high-level back-end administration such as advanced scripting. If there is a project he is not interested
+        in hosting, he will pass it to the Assistant Host.
+        <br/>In short: Head Host = The Heart of SmoreSoftware.</p><br/><br/>
+
+      <b>Assistant Host for SmoreSoftware</b><br/>
+      <p>The Assistant Host for SmoreSoftware is in charge of lesser hosting tasks and hosting projects that have been designated to him by the Head Host. His duties include making sure all projects are up and stable and completely overseeing projects that
+        have been designated to him. Currently, he is primarily in charge of the hosting for all JS projects. He oversees deploying, running, and maintaining all JS projects, as well as doing any required scripting or other maintenance tasks. He ensures
+        that all the JS projects are running well and functioning to their expectations.
+        <br/>In short: Assistant Host = The Veins of SmoreSoftware.</p><br/><br/>
+
+      <b>Team Head</b><br/>
+      <p>The Team Head for each SmoreSoftware development team is responsible for overseeing all development work done by that team. Their duties include ensuring all code is functional, approving or denying additions, assigning duties for each individual
+        developer, creating sub-teams for very specific projects, and reporting progress, satisfactory or not, to the Head of SmoreSoftware. If a developer is consistently producing code that is not optimal or missing deadlines, the Team Head is responsible
+        for reporting that and seeing to it that the developer either fixes themself or gets reassigned. When the Head of SmoreSoftware deides to reassign a developer, the Team Head may be contacted with if they think the reassignment is a good idea,
+        but they do not have ultimate say on what happens.
+        <br/>In short: Team Heads = The Bones of SmoreSoftware.</p><br/><br/>
+
+      <b>Assistant Team Developer</b><br/>
+      <p>SmoreSoftware Assistant Team Developers are responsible for producing code in order to add features as designated by their Team Head and the Head of SmoreSoftware. Their duties include coding new features, adding to existing features, fixing any
+        errors, performing unit testing on their code, and doing whatever else is designated to them by either their Team Head or the Head of SmoreSoftware. They may be instructed to clean up code added by the Maintainer. Furthermore, they may be reassigned
+        at any point and have no say in where they are placed.
+        <br/>In short: Assistant Team Developers = The Muscles of SmoreSoftware.</p><br/><br/>
+
     </table>
   </div>
 </body>
