--- a/team.html
+++ b/team.html
@@ -64,9 +64,9 @@
         <br/>In short: Head of SmoreSoftware = God.</p><br/><br/>
 
       <b>SmoreSoftware Maintainer:</b><br/>
-      <p>The SmoreSoftware Maintainer is essentially the Head's right-hand man. He is responsible for keeping all projects active and making updates to the code whenever they may be needed. His duties include making uodates to active projects whenever needed,
+      <p>The SmoreSoftware Maintainer is essentially the Head's right-hand man. He is responsible for keeping all projects active and making updates to the code whenever they may be needed. His duties include making updates to active projects whenever needed,
         proposing changes to other teams he is not actively involved in the development of, making pull requests with changes or updates ot repositories he does not have write access to, working as an individual coder on the projects he was assigned to
-        do notmal work on, and whatever else the Head designates for him to do. He may make a pull request to a project he does not work on with a rough version of a new feature for the team's induvidual coders to code up from and fix any errors caused
+        do normal work on, and whatever else the Head designates for him to do. He may make a pull request to a project he does not work on with a rough version of a new feature for the team's induvidual coders to code up from and fix any errors caused
         by the addition. Most of his work is on the JavaScript projects, where he works as a full developer on all projects, but he does add some feautres to the Lua projects. He is also currently in charge of most lower-level website administration and
         maintenance and the bulk of the web design and development.
         <br/>In short: SmoreSoftware Maintainer = SmoreSoftware's garbage man.</p><br/><br/>
