SORT ALL THE THINGS!

--- a/projects.html
+++ b/projects.html
@@ -19,19 +19,19 @@
     <h2>Bots</h2>
     <table id="projects" align="center" style="width:100%">
       <tr>
-        <td><a href="smorebot.html">SmoreBot</a></td>
+        <td><a href="projects/smorebot.html">SmoreBot</a></td>
       </tr>
       <tr>
-        <td><a href="smorebot.js.html">SmoreBot.js</a></td>
+        <td><a href="projects/smorebot.js.html">SmoreBot.js</a></td>
       </tr>
       <tr>
-        <td><a href="uke-lely.html">Uke-Lely</a></td>
+        <td><a href="projects/qbot.html">QBot</a></td>
       </tr>
       <tr>
-        <td><a href="qbot.html">QBot</a></td>
+        <td><a href="projects/webdev.html">SmoreSoftware Web</a></td>
       </tr>
       <tr>
-        <td><a href="webdev.html">SmoreSoftware Web</a></td>
+        <td><a href="projects/canceled/index.html">Canceled Projects</a></td>
     </table>
   </div>
 </body>
