--- a/projects/canceled/index.html
+++ b/projects/canceled/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Canceled Projects</title>
-  <link rel="stylesheet" type="text/css" href="/styles/style1.css">
+  <link rel="stylesheet" type="text/css" href="http://smore.romtypo.com/styles/style1.css">
 </head>
 
 <body>
