--- a/projects/canceled/uke-lely.html
+++ b/projects/canceled/uke-lely.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Uke Lely</title>
-  <link rel="stylesheet" type="text/css" href="styles/style1.css">
+  <link rel="stylesheet" type="text/css" href="http://smore.romtypo.com/styles/style1.css">
 </head>
 
 <body>
