--- a/team.html
+++ b/team.html
@@ -52,6 +52,12 @@
         <td class="nicetable">jdenderplays#2316</td>
         <td class="nicetable">SmoreBot</td>
         <td class="nicetable">Assistant Lua Dev</td>
+      </tr>
+      <tr>
+        <td class="nicetable">Sky</td>
+        <td class="nicetable">空 Sai Sky Sables 空#0228</td>
+        <td class="nicetable">Host, SmoreBot</td>
+        <td class="nicetable">Assistant Host</td>
       </tr><br/><br/>
 
       <h2>Job Descriptions</h2><br/><br/>
